load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backupschedulecontroller",
    srcs = [
        "backupschedule_controller.go",
        "operations.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers/backupschedulecontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//common/api/v1alpha1",
        "//common/controllers",
        "//oracle/api/v1alpha1",
        "//oracle/controllers/cronanythingcontroller",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/handler",
        "@io_k8s_sigs_controller_runtime//pkg/manager",
        "@io_k8s_sigs_controller_runtime//pkg/source",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//oracle/controllers/backupschedulecontroller/functest:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
