load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cronanythingcontroller",
    srcs = [
        "cronanything_controller.go",
        "operations.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers/cronanythingcontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//common/api/v1alpha1",
        "//common/controllers",
        "//oracle/api/v1alpha1",
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
