load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "importcontroller",
    srcs = ["import_controller.go"],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers/importcontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/pkg/agents/config_agent/protos",
        "//oracle/pkg/k8s",
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//tools/record",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

go_test(
    name = "importcontroller_test",
    srcs = ["import_controller_test.go"],
    embed = [":importcontroller"],
    deps = [
        "//common/api/v1alpha1",
        "//oracle/api/v1alpha1",
        "//oracle/controllers/testhelpers",
        "//oracle/pkg/k8s",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
