load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "instancecontroller",
    srcs = [
        "instance_controller.go",
        "instance_controller_parameters.go",
        "instance_controller_standby.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers/instancecontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//common/api/v1alpha1",
        "//common/pkg/maintenance",
        "//common/pkg/utils",
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/controllers/databasecontroller",
        "//oracle/pkg/agents/common/sql",
        "//oracle/pkg/agents/config_agent/protos",
        "//oracle/pkg/agents/consts",
        "//oracle/pkg/k8s",
        "@com_github_go_logr_logr//:logr",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/resource",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//tools/record",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/handler",
        "@io_k8s_sigs_controller_runtime//pkg/source",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "instancecontroller_test",
    srcs = ["instance_controller_test.go"],
    embed = [":instancecontroller"],
    deps = [
        "//common/api/v1alpha1",
        "//oracle/api/v1alpha1",
        "//oracle/controllers/testhelpers",
        "//oracle/pkg/k8s",
        "@com_github_go_logr_logr//:logr",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_client_go//util/retry",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
