load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "instancecontroller",
    srcs = [
        "instance_controller.go",
        "instance_controller_parameters.go",
        "instance_controller_patching.go",
        "instance_controller_restore.go",
        "instance_controller_restore_pitr.go",
        "instance_controller_standby.go",
        "utils.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers/instancecontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//common/api/v1alpha1",
        "//common/pkg/maintenance",
        "//common/pkg/utils",
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/pkg/agents/common/sql",
        "//oracle/pkg/agents/consts",
        "//oracle/pkg/agents/oracle",
        "//oracle/pkg/agents/security",
        "//oracle/pkg/k8s",
        "@com_github_go_logr_logr//:logr",
        "@com_github_google_go_cmp//cmp",
        "@com_github_kubernetes_csi_external_snapshotter_client_v4//apis/volumesnapshot/v1:volumesnapshot",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//storage/v1:storage",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/api/resource",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/util/intstr",
        "@io_k8s_client_go//tools/record",
        "@io_k8s_klog_v2//:klog",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/builder",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/controller",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil",
        "@io_k8s_sigs_controller_runtime//pkg/event",
        "@io_k8s_sigs_controller_runtime//pkg/handler",
        "@io_k8s_sigs_controller_runtime//pkg/predicate",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
        "@io_k8s_sigs_controller_runtime//pkg/source",
        "@io_k8s_utils//pointer",
        "@org_golang_google_genproto//googleapis/longrunning",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "instancecontroller_test",
    srcs = [
        "instance_controller_parameters_test.go",
        "instance_controller_restore_test.go",
        "instance_controller_test.go",
        "utils_test.go",
    ],
    embed = [":instancecontroller"],
    deps = [
        "//common/api/v1alpha1",
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/controllers/testhelpers",
        "//oracle/pkg/agents/oracle",
        "//oracle/pkg/k8s",
        "@com_github_go_logr_logr//:logr",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_client_go//util/retry",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//oracle/controllers/instancecontroller/instance_lock_test:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
