load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pitrcontroller",
    srcs = [
        "operations.go",
        "pitr_controller.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers/pitrcontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//common/api/v1alpha1",
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/pkg/agents/consts",
        "//oracle/pkg/agents/pitr/proto",
        "//oracle/pkg/k8s",
        "//oracle/pkg/util",
        "@com_github_go_logr_logr//:logr",
        "@com_github_robfig_cron//:cron",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/util/intstr",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/handler",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
        "@io_k8s_sigs_controller_runtime//pkg/source",
        "@io_k8s_utils//pointer",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "pitrcontroller_test",
    srcs = ["pitr_controller_test.go"],
    embed = [":pitrcontroller"],
    deps = [
        "//common/api/v1alpha1",
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/pkg/agents/pitr/proto",
        "@com_github_google_go_cmp//cmp",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
