load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testhelpers",
    srcs = [
        "envtest.go",
        "grpcmocks.go",
    ],
    data = [
        "//oracle:configs",
        "@kubebuilder_tools//:binaries",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers/testhelpers",
    visibility = ["//visibility:public"],
    deps = [
        "//common/api/v1alpha1",
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/pkg/agents/oracle",
        "//oracle/pkg/k8s",
        "@com_github_kubernetes_csi_external_snapshotter_v2//pkg/apis/volumesnapshot/v1beta1",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_ginkgo//config",
        "@com_github_onsi_gomega//:gomega",
        "@com_google_cloud_go_storage//:storage",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//rbac/v1:rbac",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/api/resource",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/serializer",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//util/retry",
        "@io_k8s_klog_v2//:klog",
        "@io_k8s_klog_v2//klogr",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/client/config",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/envtest/printer",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
